@@ -92,6 +92,10 @@
 
 * Added Plug::source() method.
 
+* Added GraphGadget::nodeGadgetAt() method.
+
+* GraphGadget now uses middle mouse drag for sending nodes to other widgets - left mouse drag is for moving nodes only. Shift drags can be used to add nodes to the current selection.
+
 0.36.0
 ------
 * Improved bindings by removing macros and replacing them with proper wrapper classes.
